[package]
edition      = "2024"
name         = "esp_practice_v3"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp_practice_v3"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "esp-alloc",
  "esp-radio",
  "esp32",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }

bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"
embedded-io = { version = "0.7.1", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "defmt",
  "esp-alloc",
  "esp32",
  "unstable",
] }


scd4x = { version = "0.4.1"}


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
